apps/forkbasket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forkbasket
spec:
  selector:
    app: forkbasket
  ports:
    - name: http
      port: 8080
      targetPort: http
